elastic_stack/kibana/kibana-deploy.yaml
# Copyright (C) 2018 Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Kibana Deployment

apiVersion: v1
kind: Deployment
metadata:
  name: wazuh-kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-kibana
  template:
    metadata:
      labels:
        app: wazuh-kibana
      name: wazuh-kibana
    spec:
      containers:
        - name: wazuh-kibana
          image: 'wazuh/wazuh-kibana:3.11.3_7.5.2'
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 400m
              memory: 1024Mi
          ports:
            - containerPort: 5601
              name: kibana
