elastic_stack/kibana/kibana-svc.yaml
# Copyright (C) 2018 Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Kibana service

apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: wazuh
  labels:
    app: wazuh-kibana
spec:
  selector:
    app: wazuh-kibana
  ports:
    - name: kibana
      port: 5601
      targetPort: 5601
