elastic_stack/kibana/nginx-svc.yaml
# Copyright (C) 2018 Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Nginx service

apiVersion: v1
kind: Service
metadata:
  name: wazuh-nginx
  namespace: wazuh
  labels:
    app: wazuh-nginx
spec:
  selector:
    app: wazuh-nginx
  ports:
    - name: web-https
      port: 443
      targetPort: 443
