elastic_stack/kibana/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wazuh-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - wazuh.bytelabs.ng
      secretName: wazuh-nginx-tls
  rules:
    - host: wazuh.bytelabs.ng
      http:
        paths:
          - path: /
            backend:
              serviceName: wazuh-nginx
              servicePort: 80
